--- a/src/dfa/DFAView.form
+++ b/src/dfa/DFAView.form
@@ -125,6 +125,9 @@
                 </Property>
                 <Property name="updateSelectionOnSort" type="boolean" value="false"/>
               </Properties>
+              <Events>
+                <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="Clicktabla"/>
+              </Events>
             </Component>
           </SubComponents>
         </Container>
